// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <RecordsOfTablePopoverMedications /> should renders with props correctly 1`] = `
<div
  className="form-group-wrapper"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Name
        </label>
        <div
          className="form-control-static"
        >
          test medication 11.01
        </div>
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Dose Amount
        </label>
        <div
          className="form-control-static"
        >
          Dose Amount
        </div>
      </div>
    </Col>
  </Row>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Dose Timing
        </label>
        <div
          className="form-control-static"
        >
          Dose Amount
        </div>
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Dose Descriptions
        </label>
        <div
          className="form-control-static"
        >
          Dose Direction
        </div>
      </div>
    </Col>
  </Row>
  <div
    className="col-expand-right"
  >
    <div
      className="form-group"
    >
      <label
        className="control-label"
      >
        Date
      </label>
      <div
        className="form-control-static"
      >
        01-Jan-2018
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <RecordsOfTablePopoverMedications /> should renders with props correctly with empty detail 1`] = `
<div
  className="form-group-wrapper"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Name
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Dose Amount
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </Col>
  </Row>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Dose Timing
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Dose Descriptions
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </Col>
  </Row>
  <div
    className="col-expand-right"
  >
    <div
      className="form-group"
    >
      <label
        className="control-label"
      >
        Date
      </label>
      <div
        className="form-control-static"
      >
        01-Jan-2018
      </div>
    </div>
  </div>
</div>
`;
